<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#171717"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/map_img"
                android:layout_width="0dp"
                android:layout_height="148dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/mapimg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/state_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_textview"
                android:padding="5dp"
                android:text="State Name"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/map_img" />

            <TextView
                android:id="@+id/city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_textview"
                android:padding="5dp"
                android:text="City Name"
                android:textColor="@color/white"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/map_img" />

            <TextView
                android:id="@+id/ride_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/ride_tv_text"
                android:textColor="#CFCFCF"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/state_tv" />

            <TextView
                android:id="@+id/origin_station_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/origin_tv_text"
                android:textColor="#CFCFCF"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/ride_tv" />

            <TextView
                android:id="@+id/station_path_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/station_path_tv_text"
                android:textColor="#CFCFCF"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/origin_station_tv" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="#CFCFCF"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/station_path_tv" />

            <TextView
                android:id="@+id/distance_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/distance"
                android:textColor="#CFCFCF"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/map_img"
                app:layout_constraintRight_toRightOf="@id/map_img"
                app:layout_constraintTop_toBottomOf="@id/date_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>